Match Sidebar style class names to Component name exactly

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -24,7 +24,7 @@
 
   // This matches the folder sidebar width
   width: 25%;
-  max-width: $zorroa-sidebar-width;
+  max-width: $zorroa-Sidebar-width;
 }
 
 // Simple menu text for now
