--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -42,7 +42,7 @@ $zorroa-transparent: transparent;
 
 /* shared metrics */
 
-$zorroa-sidebar-width : 340px;
+$zorroa-Sidebar-width : 340px;
 
 
 /* Button classes */
