--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -1,21 +1,12 @@
 @import '../../styles/core-mixins.scss';
 
 .racetrack {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   height: 100%;
 
   .racetrack-body {
-    display: flex;
-    flex-direction: column;
   }
 
   .racetrack-empty {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     background: none;
     text-shadow: -1px -1px 0px rgba(200,200,200,0.8), 1px 1px 0px rgba(255,255,255,0.3);
     color: rgba(220,220,220, 0.5);
@@ -51,7 +42,6 @@
       height: 24px;
       font-size: 14px;
       font-weight: 500;
-      outline: none;
     }
   }
 
@@ -65,48 +55,43 @@
   }
 
   .racetrack-add-filter {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0;
     margin: 40px 0;
 
     .racetrack-add-filter-item {
       margin-top: 4px;
-    }
 
-    .racetrack-add-filter-item:hover {
-      background-color: #fff;
-      opacity: 0.75;
-      z-index: 2;
+      &:hover {
+        background-color: #fff;
+        opacity: 0.75;
+        z-index: 2;
+      }
     }
 
     button {
-      padding: 12px 12px;
-      font-size: 14px;
+      height: 40px;
+      padding: 0 12px;
       font-weight: 500;
       background-color: $zorroa-greyish-brown;
       color: $zorroa-nearwhite;
       border-radius: 3px;
       border: none;
-      outline: none;
+
+      &:hover {
+        background-color: #a5a5a5;
+        color: $zorroa-nearwhite;
+        font-weight: 500;
+      }
+
+      &:active {
+        background-color: $zorroa-sickly-green;
+        color: $zorroa-nearwhite;
+        font-weight: 500;
+      }
     }
 
-    button:hover {
-      background-color: #a5a5a5;
-      color: $zorroa-nearwhite;
-      font-weight: 500;
-    }
-
-    button:active {
-      background-color: $zorroa-sickly-green;
-      color: $zorroa-nearwhite;
-      font-weight: 500;
-    }
-
-    input {
-      height: 28pt;
-      outline: none;
+    .Racetrack-add-quick {
+      height: 40px;
       padding: 0 8px;
       border-radius: 3px;
       border: 1px solid #a5a5a5;
@@ -138,19 +123,18 @@
       border-radius: 3px;
       background: none;
       border: none;
-      outline: none;
-    }
 
-    button:hover {
-      background-color: #a5a5a5;
-      color: $zorroa-nearwhite;
-      font-weight: 500;
-    }
+      &:hover {
+        background-color: #a5a5a5;
+        color: $zorroa-nearwhite;
+        font-weight: 500;
+      }
 
-    button:active {
-      background-color: $zorroa-sickly-green;
-      color: $zorroa-nearwhite;
-      font-weight: 500;
+      &:active {
+        background-color: $zorroa-sickly-green;
+        color: $zorroa-nearwhite;
+        font-weight: 500;
+      }
     }
   }
 }
