--- a/src/components/CollapsibleHeader/CollapsibleHeader.scss
+++ b/src/components/CollapsibleHeader/CollapsibleHeader.scss
@@ -11,6 +11,12 @@
   color: $zorroa-gray;
   font-weight: 100;
   overflow: hidden;
+
+  // FIXME: Is there a way to share the isSelected subclass?
+  &.isSelected {
+    color: white;
+    background-color: $zorroa-water-blue;
+  }
 }
 
 .CollapsibleHeader-icon {
@@ -20,6 +26,10 @@
 
   &.isIconified {
     margin-right: 0;
+  }
+
+  &.isSelected {
+    color: white;
   }
 }
 
@@ -35,4 +45,8 @@
   margin-right: 1em;
   margin-left: 8px;
   color: $zorroa-gray;
+
+  &.isSelected {
+    color: white;
+  }
 }
