--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -29,3 +29,39 @@
 .searchbar:focus {
   outline: none;
 }
+
+.searchbar-suggestions {
+  box-sizing: border-box;
+  position:relative;
+  padding: 0;
+  margin: 0;
+
+  ul {
+    background-clip: padding-box;
+    background-color: rgba(255,255,255,0.85);
+    border-radius: 3px;
+    border: 1px solid $zorroa-lightgray;
+    box-sizing: border-box;
+    list-style-type: none;
+    margin: 2px 0 0;
+    padding: 8px 8px;
+    position: absolute;
+    text-align: left;
+    top: 100%;
+    z-index: 1000;
+    box-shadow: 0 4px 10px 0 $zorroa-darkgray;
+
+    // Could not figure out how to make this match the <input>
+    width: 89%;
+  }
+
+  li {
+    width: 100%;
+    color: $zorroa-darkgray;
+    line-height: 1.5;
+
+    &:hover {
+      color: $zorroa-sickly-green;
+    }
+  }
+}
