David/collapsible refactor (#87)
Fork Widget from Collapsible

- Widget is for the Racetrack, Collapsible is for the left Sidebar
- Delete FilterHeader
- Remove duplicate Collapsible functionality from SimpleSearch & Facet; use Widget (the Racetrack Collapsible)
- Remove deps on SimpleSearchHeader and FacetHeader from the add widget dropdown menu


- Customize hover & toggle behavior for FolderItem vs Metadata
- Customize hover & close behavior for Widget
- Updated styling for all elements formerly or currently known as Collapsible
- Let Widget & Collapsible take a className prop, so we don't have to wrap them in extra divs

* css globals: change font to default 14, but rely on inheritance, dont set it for all elements

* Update Facet css classes to match component name exactly

* Facet: wrap the button with a classy div, so's it can be styled

* Wrap FolderItem header in a classy div, so's it can be styled

* Use a classy div instead of element type for the DropDown menu chooser

* Dont render the empty Collapsible body

* Move folder margins from Collapsible to Folders

* Fix some Collapsible css capitalization

* Get FolderItem & CollapsibleHeader working together

* Show select & open hover separately

* Rename Facet-box & Facet css clases to Face & Facet-body respectively

* Simplify the CollapsibleHeader css

* SimpleSearch: sync with css class name changes

* Put CollapsibleHeader inside Collapsible & fix left sidebar

* Remove CollapsibleHeader from Metadata

* Remove CollapsibleHeader from DisplayPropertiesItem

* CollapsibleHeader: openIcon is not required (because SimpleSearch)

* Update FilterHeader, match filename & css class names to component name

* Make Collapsible call the onOpen callback when toggled

* Remove Racetrack's dependency on SimpleSearchHeader & FacetHeader

* Match SimpleSearch css classes to component name

* Move CollapsibleHeader into the Collapsible/ folder

Add Collapsible s

--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -3,33 +3,31 @@
 .CollapsibleHeader {
   @include nowrap;
   height: 40px;
-  padding: 5px;
-  padding-left: 10px;
-  background-color: #d8d8d8;
-  margin-bottom: 5px;
   text-transform: uppercase;
-  color: $zorroa-gray;
   font-weight: 100;
   overflow: hidden;
 
-  // FIXME: Is there a way to share the isSelected subclass?
+  color: $zorroa-gray;
+  background-color: #d8d8d8;
   &.isSelected {
     color: white;
     background-color: $zorroa-water-blue;
   }
+
+  // Hover rules were removed so that Metadata & FolderItem can easily customize
+}
+
+.CollapsibleHeader-select {
+  padding: 5px;
+  padding-left: 10px;
 }
 
 .CollapsibleHeader-icon {
-  color: $zorroa-gray;
   margin-right: 14px;
   padding-bottom: 3px;
 
   &.isIconified {
     margin-right: 0;
-  }
-
-  &.isSelected {
-    color: white;
   }
 }
 
@@ -37,16 +35,13 @@
   @include clampText;
 }
 
+.CollapsibleHeader-open {
+  width: 40px;
+}
+
 .CollapsibleHeader-caret {
   font-size: 15px;
   width: 16px;
   min-width: 16px;
   max-width: 16px;
-  margin-right: 1em;
-  margin-left: 8px;
-  color: $zorroa-gray;
-
-  &.isSelected {
-    color: white;
-  }
 }
