--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   position:relative;
 
-  button {
+  .dropdown-button {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
