--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -1,5 +1,32 @@
+@import '../../styles/core-mixins.scss';
+
 .Folders {
   & > .FolderItem {
     margin-bottom: 5px;
+  }
+}
+
+.Folders-controls {
+  button {
+    color: $zorroa-darkgray;
+    background-color: transparent;
+    margin: 0 12px 8px 4px;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 3px;
+
+    &:disabled {
+      color: $zorroa-lightgray
+    }
+
+    &:hover:enabled {
+      color: $zorroa-sickly-green;
+    }
+    
+    &:active:enabled {
+      color: $zorroa-nearwhite;
+      background-color: $zorroa-sickly-green;
+    }
   }
 }
