--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -29,6 +29,8 @@ $zorroa-water-blue     : #1875d1;
 $zorroa-darkish-purple : #a11e77;
 $zorroa-medium-pink    : #ee4688;
 $zorroa-warm-grey-60   : rgba(128, 128, 128, 0.6);
+$zorroa-slategray      : #787a77;
+$zorroa-light-green    : #b7df4d;
 
 
 // A few extra useful colors Amber didn't specify
