--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -2,9 +2,14 @@
 
 .Metadata {
   .Metadata-icon {
-    margin-left: 6px;
+    margin-left: 0;
     font-size: 10px;
     color: $zorroa-warm-grey-60;
+    padding: 6px;
+
+    &:hover {
+      color: $zorroa-sickly-green;
+    }
   }
 
   // Metadata don't select, so we toggle them when clicking the label or caret
