--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -1,20 +1,56 @@
 @import '../../styles/core-mixins.scss';
 
+$FolderItemHeight : 25px;
+
 // Give all children FolderItems some indentation, but not the top-level FolderItem
-.Collapsible .FolderItem {
-  margin-left: 16px;
-  .CollapsibleHeader {
-    height: 30px;
+.FolderItem {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @linclude fullWidth;
+
+  height: $FolderItemHeight;
+
+  &:not(.isOpen) .FolderItem-toggleArrow {
+    transform: rotate(-90deg);
   }
+  &:not(.hasChildren) .FolderItem-toggleArrow {
+    display: none;
+  }
+
+  &:nth-child(even) {
+    background-color: white;
+    &.isSelected { color: white; background-color: $zorroa-water-blue; }
+    // &:hover.isSelected { color: white; background-color: darken($zorroa-water-blue, 15%); }
+  }
+  &.isSelected { color: white; background-color: $zorroa-water-blue; }
+  // &:hover.isSelected { color: white; background-color: darken($zorroa-water-blue, 15%); }
 }
 
-.FolderItem {
-  .FolderItem-header {
-    @include clampText;
-  }
+.FolderItem-toggle {
+  @include flexOff;
+  @include flexRowCenter;
 
-  .CollapsibleHeader {
-    & > *:hover { background-color: darken(#d8d8d8, 15%); }
-    &.isSelected > *:hover { background-color: darken($zorroa-water-blue, 15%); }
-  }
+  width: $FolderItemHeight;
+  height: $FolderItemHeight;
+  &:hover { color: white; background-color: darken(#d8d8d8, 15%); }
+  .FolderItem.isSelected &       { color: white; background-color: $zorroa-water-blue; }
+  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-water-blue, 15%); }
+}
+
+.FolderItem-select {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  @include fullHeight;
+  @include fullWidth;
+
+  padding-left: 5px;
+  &:hover { color: white; background-color: darken(#d8d8d8, 15%); }
+  .FolderItem.isSelected &       { color: white; background-color: $zorroa-water-blue; }
+  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-water-blue, 15%); }
+}
+
+
+.FolderItem-text {
+  @include clampText;
+  margin-left: 10px;
 }
