--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -1,12 +1,11 @@
 @import '../../styles/core-mixins.scss';
 
 .Folders {
-  & > .FolderItem {
-    margin-bottom: 5px;
-  }
 }
 
 .Folders-controls {
+  @include flexRow;
+
   button {
     color: $zorroa-darkgray;
     background-color: transparent;
@@ -23,7 +22,7 @@
     &:hover:enabled {
       color: $zorroa-sickly-green;
     }
-    
+
     &:active:enabled {
       color: $zorroa-nearwhite;
       background-color: $zorroa-sickly-green;
