--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -7,9 +7,12 @@
   }
 
   .Racetrack-empty {
-    background: none;
-    text-shadow: -1px -1px 0px rgba(200,200,200,0.8), 1px 1px 0px rgba(255,255,255,0.3);
-    color: rgba(220,220,220, 0.5);
+    background-color: rgba(200,200,200,1);
+    color: transparent;
+    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 
     .Racetrack-empty-mag:before {
       width: 48px;
@@ -24,8 +27,8 @@
 
     .Racetrack-empty-text {
       text-align: center;
-      font-size: 12px;
-      font-weight: 300;
+      font-size: 14px;
+      font-weight: 700;
     }
 
     form {
