--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -24,6 +24,17 @@
     width: 1px;
     border-right: 1px solid $zorroa-lightgray;
   }
+
+  .Metadata-icon {
+    margin-left: 0;
+    font-size: 10px;
+    color: $zorroa-warm-grey-60;
+    padding: 6px;
+
+    &:hover {
+      color: $zorroa-sickly-green;
+    }
+  }
 }
 
 // Footers use flex-basis to toggle between open and close
