Add a search icon to select the map search field rather than just location. [Finishes #134242577][Fixes #134310767] (#102)

--- a/src/components/Racetrack/Map.scss
+++ b/src/components/Racetrack/Map.scss
@@ -20,4 +20,11 @@
   .Facet-body {
     padding: 10px;
   }
+
+  .Map-header {
+    div[class*="icon-"] {
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+  }
 }
