A styling grab-bag (#109)
* Load grandchildren when opening a folder, so children toggle icons can be displayed

* A styling grab-bag

Fix left sidebar icons (iconified collapsible header centering)
Add hover effects & separators to DropdownMenu
Change Folder selection color from blue to gray
Add hover colors to sidebar iconify buttons
Add hover effects to Thumbs
Use less margin between menus
Add menu hovers
Make Table style class names consistent with component
Add hover to Assets layot & table toggle buttons

* Remove leftover comments

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -83,18 +83,20 @@
 
   .thumb-layout-button {
     color: #000;
-    background-color: #fff;
     width: 40px;
     height: 40px;
     border-radius: 3px;
     border: none;
     outline: none;
     font-size: 20px;
+    background-color: #fff;
+    &:hover { background-color: $zorroa-lightgray; }
   }
 
   .thumb-layout-enabled {
     color: #fff;
     background-color: $zorroa-sickly-green;
+    &:hover { background-color: darken($zorroa-sickly-green, 15%); }
   }
 }
 
@@ -104,17 +106,20 @@
 
   .table-toggle-button {
     color: #000;
-    background-color: #fff;
     width: 40px;
     height: 40px;
     border-radius: 3px;
     border: none;
     outline: none;
     font-size: 20px;
+    background-color: #fff;
+    &:hover { background-color: $zorroa-lightgray; }
   }
 
   .table-toggle-enabled {
     color: #fff;
     background-color: $zorroa-sickly-green;
+    &:hover { background-color: darken($zorroa-sickly-green, 15%); }
   }
+
 }
