--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -80,17 +80,17 @@
     @include clampText;
   }
 
-  .assets-table-header {
+  .Table-header {
     text-align: left;
     //width: 40%;
   }
 
-  .assets-table-row {
+  .Table-row {
     text-align: left;
     //width: 60%;
   }
 
-  .asset-table-settings {
+  .Table-settings {
     width: 24px;
     color: $zorroa-gray;
   }
