--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -1,17 +1,17 @@
 @import '../../styles/core-mixins.scss';
 
-.dropdown-menu {
+.DropdownMenu {
   box-sizing: border-box;
   display: inline-block;
   position:relative;
 
-  .dropdown-button {
+  .DropdownMenu-button {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 
-    -webkit-appearance: button;
+    // -webkit-appearance: button;
     background-color: #fff;
     border: 1px solid transparent;
     box-sizing: border-box;
@@ -21,12 +21,18 @@
     padding: 0;
     white-space: nowrap;
     text-transform: uppercase;
+    padding: 5px;
+    border-radius: 3px;
+
     &:focus {
       outline: none;
     }
+    &:hover {
+      background-color: $zorroa-lightgray;
+    }
   }
 
-  ul {
+  .DropdownMenu-list {
     background-clip: padding-box;
     background-color: #fff;
     border-radius: 4px;
@@ -42,8 +48,16 @@
     box-shadow: 0 0 30px 0 $zorroa-gray;
   }
 
-  li {
-    line-height: 1.5
+  .DropdownMenu-item {
+    line-height: 1.5;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+    border-radius: 3px;
+    &:hover {
+      background-color: $zorroa-lightgray;
+    }
   }
 
   a {
@@ -52,9 +66,19 @@
     font-size: 1rem;
   }
 
-  .dropdown-caret {
+  .DropdownMenu-caret {
     font-size: 10px;
     padding: 5px;
     color: $zorroa-gray;
+  }
+
+  .DropdownMenu-separator {
+    height: 1px;
+    background-color: $zorroa-nearwhite;
+    padding: 0;
+    // Cancel DropdownMenu-item hover
+    &:hover {
+      background-color: $zorroa-nearwhite;
+    }
   }
 }
