--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -19,11 +19,9 @@ $FolderItemHeight : 25px;
 
   &:nth-child(even) {
     background-color: white;
-    &.isSelected { color: white; background-color: $zorroa-water-blue; }
-    // &:hover.isSelected { color: white; background-color: darken($zorroa-water-blue, 15%); }
+    &.isSelected { color: white; background-color: $zorroa-gray; }
   }
-  &.isSelected { color: white; background-color: $zorroa-water-blue; }
-  // &:hover.isSelected { color: white; background-color: darken($zorroa-water-blue, 15%); }
+  &.isSelected { color: white; background-color: $zorroa-gray; }
 }
 
 .FolderItem-toggle {
@@ -33,8 +31,8 @@ $FolderItemHeight : 25px;
   width: $FolderItemHeight;
   height: $FolderItemHeight;
   &:hover { color: white; background-color: darken(#d8d8d8, 15%); }
-  .FolderItem.isSelected &       { color: white; background-color: $zorroa-water-blue; }
-  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-water-blue, 15%); }
+  .FolderItem.isSelected &       { color: white; background-color: $zorroa-gray; }
+  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-gray, 15%); }
 }
 
 .FolderItem-select {
@@ -45,8 +43,8 @@ $FolderItemHeight : 25px;
 
   padding-left: 5px;
   &:hover { color: white; background-color: darken(#d8d8d8, 15%); }
-  .FolderItem.isSelected &       { color: white; background-color: $zorroa-water-blue; }
-  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-water-blue, 15%); }
+  .FolderItem.isSelected &       { color: white; background-color: $zorroa-gray; }
+  .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-gray, 15%); }
 }
 
 
