--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -5,6 +5,7 @@
 
 .Folders-controls {
   @include flexRow;
+  position: relative;         // important for CreateFolder position:absolute
 
   button {
     color: $zorroa-darkgray;
