Use filter-buckets and post-filter for widget aggs. Show selected Facet terms. Multiple term selection. [Finishes #134215757][Finishes #134169769] (#111)

--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -61,6 +61,13 @@
     overflow: hidden;
     overflow-y: auto;
 
+    .Facet-value-table-row {
+
+      &.selected {
+        color: white;
+        background-color: $zorroa-water-blue;
+      }
+    }
   }
 
   // Custom scrollbar styles from Amber
@@ -82,12 +89,10 @@
 
   .Table-header {
     text-align: left;
-    //width: 40%;
   }
 
   .Table-row {
     text-align: left;
-    //width: 60%;
   }
 
   .Table-settings {
