Load grandchildren when opening a folder, so children toggle icons can be displayed (#108)
* Load grandchildren when opening a folder, so children toggle icons can be displayed

But prevent network requests for already cached folders
Except always request children of empty folders,
so if someone else creates a child, I can see it.

s/getFolderList/renderFolderList/g

* For folder action getFolderChildren, remove callback arg & use redux-thunk the way it was meant

* Wait to show the folder toggle triangle until children are loaded

* Remove unused code from FolderItem

* Folder hover states for DnD

Add a DnD dropzone on folders

This is to deal with DnD on targets that have children
Hovering over children sends the dragleave event

Set app state flag when dragging, so we can toggle folder drop zones

Dropzones have to be hidden when not dragging
otherwise they block pointer events (folder select / toggle)
Making them visible while dragging lets user see them, also enables the drop
target's pointer events (and temporarily blocks folder select / toggle)

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -8,6 +8,8 @@ $FolderItemHeight : 25px;
   @include flexAlignItemsCenter;
   @include fullWidth;
 
+  position: relative; // fbo .FolderItem-dropzone, who's position: absolute
+
   height: $FolderItemHeight;
 
   &:not(.isOpen) .FolderItem-toggleArrow {
@@ -51,4 +53,20 @@ $FolderItemHeight : 25px;
 .FolderItem-text {
   @include clampText;
   margin-left: 10px;
+}
+
+.FolderItem-dropzone {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: none;
+  border: 1px solid $zorroa-gray;
+  border-radius: 2px;
+
+  .App.isDragging & {
+    display: block;
+  }
 }
