--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -1,7 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 // App class, containing header and workspace in columns
-.app {
+.App {
   display: flex;
   flex-direction: column;
   overflow: hidden;
