--- a/src/components/Folders/CreateFolder.scss
+++ b/src/components/Folders/CreateFolder.scss
@@ -132,8 +132,14 @@
       margin-top: 20px;
 
       button {
+        background: none;
+        border: none;
         padding: 10px 30px;
         margin: 18px 8px;
+        border-radius: 3px;
+        font-size: 14px;
+        text-transform: uppercase;
+        font-weight: 500;
 
         &:hover {
           color: white;
