--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -8,4 +8,30 @@
     &:hover { background-color: darken(#d8d8d8, 15%); }
     &.isSelected { background-color: darken($zorroa-water-blue, 15%); }
   }
+
+  .header {
+    @include flexRow;
+    @include flexJustifySpaceBetween;
+    @include flexAlignItemsCenter;
+    height: auto;
+
+    input {
+      @include flexOn;
+      height: 20px;
+      margin: 8px 12px 8px 4px;
+      border-radius: 3px;
+      background: none;
+      border: 1px solid $zorroa-lightgray;
+      padding-left: 4px;
+      padding-right: 4px;
+    }
+
+    .icon-cog {
+      color: $zorroa-gray;
+
+      :hover {
+        color: $zorroa-sickly-green;
+      }
+    }
+  }
 }
